force-app/main/default/objects/Account_Scoring_Item__c/Account_Scoring_Item__c.object-meta.xml
<CustomObject>
    <label>Account Scoring Item</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Scoring Item#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Scoring Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>