force-app/main/default/objects/Account_Scoring_Item__c/fields/Account_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Account_Scoring__c</fullName>
    <label>Account Scoring</label>
    <referenceTo>Account_Scoring__c</referenceTo>
    <relationshipLabel>Account Scoring Items</relationshipLabel>
    <relationshipName>Account_Score_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>