force-app/main/default/objects/Account_Scoring_Item__c/fields/Display_Score__c.field-meta.xml
<CustomField>
    <fullName>Display_Score__c</fullName>
    <formula>IF(TEXT( Display_Type__c ) == &apos;Green&apos;,  IMAGE(&apos;/resource/1470622569000/AccountScoring/Green.JPG&apos;, TEXT(Score__c)) + &apos; &apos; +  TEXT(Score__c),  
IF(TEXT( Display_Type__c ) == &apos;Yellow&apos;,  IMAGE(&apos;/resource/1470622569000/AccountScoring/Yellow.JPG&apos;, TEXT(Score__c)) + &apos; &apos; +  TEXT(Score__c),  
IF(TEXT( Display_Type__c ) == &apos;Red&apos;,  IMAGE(&apos;/resource/1470622569000/AccountScoring/Red.JPG&apos;, TEXT(Score__c)) + &apos; &apos; +  TEXT(Score__c), &apos;&apos; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Score</label>
    <type>Text</type>
</CustomField>