force-app/main/default/objects/Account_Scoring_Item__c/fields/Normalized_Score__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Score__c</fullName>
    <label>Normalized Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>