force-app/main/default/objects/Account_Scoring_Item__c/fields/Scoring_Item__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Item__c</fullName>
    <label>Scoring Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>