force-app/main/default/objects/Account_Scoring_Item__c/fields/Scoring_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Item_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scoring Item ID</label>
    <referenceTo>Scoring_Item__c</referenceTo>
    <relationshipLabel>Account Scoring Items</relationshipLabel>
    <relationshipName>Account_Scoring_Items</relationshipName>
    <type>Lookup</type>
</CustomField>